# clauditor

./: .coveragerc  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  aj2ufmqt4fk9uepdd6mseffelacstngp  aspo9fnsk3rdustdp1rtjhdopnjicgc6  codecov.yml  epqef7gbcfbf4id3daskjcdiqsjie5mv.darc  index.html  jjksoracjpm9ahdqjsrdcb0k0mvstet4.darc  manifest  mkdocs.yml  pyproject.toml  sitemap.xml
.beads/: metadata.json
.claude/: settings.json  show-maintainer-skills.sh
.claude/rules/: back-compat-shim-discipline.md  bundled-skill-docs-sync.md  centralized-sdk-call.md  constant-with-type-info.md  cross-axis-comparability-refusal.md  data-vs-asserter-split.md  dual-version-external-schema-embed.md  eval-spec-stable-ids.md  harness-protocol-shape.md  in-memory-dict-loader-path.md  internal-skill-live-test-tmp-symlink.md  json-schema-version.md  json-stdout-purity.md  llm-cli-exit-code-taxonomy.md  llm-judge-prompt-injection.md  mock-side-effect-for-distinct-calls.md  monotonic-time-indirection.md  multi-provider-dispatch.md  non-mutating-scrub.md  numeric-judge-field-anchors.md  path-validation.md  per-type-drift-hints.md  permissive-parser-strict-validator.md  plan-contradiction-stop.md  positional-id-zip-validation.md  pr-plan-to-implementation-transition.md  pre-llm-contract-hard-validate.md  precall-env-validation.md  project-root-home-exclusion.md  pure-compute-vs-io-split.md  pytest-fixture-precedence-mirror.md  pytester-inprocess-coverage-hazard.md  readme-promotion-recipe.md  rule-refresh-vs-delete.md  sidecar-during-staging.md  skill-identity-from-frontmatter.md  spec-cli-precedence.md  stream-json-schema.md  subprocess-cwd.md  test-infra-shutil-which-coupling.md
.clauditor/: history.jsonl
.clauditor/badges/: clauditor.clauditor.json  clauditor.json  release-manager.clauditor.json  release-manager.json  review-agentskills-spec.clauditor.json  review-agentskills-spec.json
.github/workflows/: ci.yml  npm-publish.yml  publish.yml
adr/transport-research-103/: index.html
architecture/: index.html
audit-trend-workflow/: index.html
badges/: index.html
build_hooks/: stamp_skill_version.py
changelog/: index.html
cli-reference/: index.html
codex-harness/: index.html
codex-stream-schema/: index.html
cost-tracking/: index.html
docs/: architecture.md  audit-trend-workflow.md  badges.md  changelog.md  cli-reference.md  codex-harness.md  codex-stream-schema.md  cost-tracking.md  eval-spec-reference.md  index.md  layers.md  pytest-plugin.md  quick-start.md  skill-usage.md  skills.md  stream-json-schema.md  transport-architecture.md
docs/adr/: transport-research-103.md
docs/temp/: real-world-test-observations.md
eval-spec-reference/: index.html
examples/: review-agentskills-spec.md
layers/: index.html
npm/: .gitignore  .npmignore  README.md  eslint.config.js  index.d.ts  index.js  jest-helper.d.ts  jest-helper.js  jest.config.js  package.json  vitest.config.js
npm/__tests__/: api.test.js  bin.test.js  exec-json.test.js  exec-maxbuffer.test.js  jest-helper.test.js  lib-core.test.js  skeleton.test.js
npm/lib/: errors.js  exec.js  resolve-binary.js
npm/test/: api.test.js  bin.test.js  jest-helper.test.js  lib-core.test.js  skeleton.test.js
plans/super/: 103-bg-task-eval-coverage.md  11-first-pass-improvements.md  12-tiered-section-validation.md  13-field-validation.md  134-bundled-skill-fixes.md  144-providers-call-model.md  145-openai-provider.md  146-grading-provider-precedence.md  147-sidecar-provider-field.md  (+48 more)
pytest-plugin/: index.html
quick-start/: index.html
scripts/: bench_cli_transport.py  repro_cli_truncation.py  validate_skill_frontmatter.py
search/: search_index.json
skill-usage/: index.html
skills/: index.html
stream-json-schema/: index.html
tests/: conftest.py  test_anthropic.py  test_anthropic_raw_message_none.py  test_asserters.py  test_assertions.py  test_audit.py  test_background_task_fixture.py  test_badge.py  test_baseline.py  test_benchmark.py  test_bundled_review_skill.py  test_bundled_skill.py  test_capture_provenance.py  test_cli.py  test_cli_auth_guard.py  test_cli_badge.py  test_cli_grade.py  test_cli_grade_implicit_coupling.py  test_cli_grading_provider.py  test_cli_grading_provider_e2e.py  test_cli_helpers.py  test_cli_init.py  test_cli_lint.py  test_cli_propose_eval.py  test_cli_transcript_redaction.py  test_cli_transcript_slice.py  test_codex_harness.py  test_comparator.py  test_conformance.py  test_context.py  test_docs_examples.py  test_doctor.py  test_e2e_setup.py  test_formats.py  test_frontmatter.py  test_git.py  test_grader.py  test_harnesses_construct.py  test_history.py  test_init.py  (+22 more)
transport-architecture/: index.html
(+83 files in other folders)
