[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clauditor-eval"
version = "0.1.0"
description = "Auditor for Claude Code skills and slash commands. Validates structured output against schemas using layered evaluation."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Wes Duenow", email = "wes@wjduenow.com" },
]
keywords = ["claude", "claude-code", "testing", "eval", "skills", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = ["anthropic>=0.40.0"]

[project.optional-dependencies]
grader = []  # backward compat — anthropic is now a default dependency
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "anthropic>=0.40.0",
]

[project.scripts]
clauditor = "clauditor.cli:main"

[project.entry-points.pytest11]
clauditor = "clauditor.pytest_plugin"

[project.urls]
Homepage = "https://github.com/wjduenow/clauditor"
Documentation = "https://wjduenow.github.io/clauditor/"
Repository = "https://github.com/wjduenow/clauditor"
Issues = "https://github.com/wjduenow/clauditor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/clauditor"]
include = ["src/clauditor/skills/**/*"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_hooks/stamp_skill_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/clauditor",
    "build_hooks",
    "tests",
    "examples",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    ".beads",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = "--import-mode=importlib --cov-fail-under=80"
markers = [
    "slow: end-to-end tests that build wheels and spin up venvs (~2s total per run thanks to a session-scoped fixture; opt out via -m 'not slow')",
    "live: opt-in tests that invoke the real 'claude' CLI and spend Anthropic tokens (require CLAUDITOR_RUN_LIVE=1 + ANTHROPIC_API_KEY + claude on PATH; skipped otherwise, never run in default CI)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "anthropic>=0.40.0",
    "mkdocs-material>=9.0",
    "mkdocs-include-markdown-plugin>=6.0",
]
